# cadence

./: .gitignore  CHANGELOG.md  LICENSE  cabal.project  cadence.cabal  flake.nix
.github/workflows/: ci.yml
app/: Main.hs
src/: Cadence.hs
src/Cadence/: Constraint.hs  CurrentPlan.hs  Goal.hs  Objective.hs  SessionLog.hs
test/: CadenceSpec.hs  Main.hs
test/Cadence/: ConstraintSpec.hs  CurrentPlanSpec.hs  GoalSpec.hs  ObjectiveSpec.hs  SessionLogSpec.hs
