cabal-version:   3.16
name:            cadence
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Andrea Maria Piana
maintainer:      andrea.maria.piana@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cadence
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: GHC2021
