cabal-version:   3.16
name:            cadence
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Andrea Maria Piana
maintainer:      andrea.maria.piana@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Cadence
        Cadence.Objective
        Cadence.Goal
    hs-source-dirs:   src
    build-depends:
        base ^>=4.20.2.0,
        text ^>=2.1.3,
        time ^>=1.12.2
    default-language: GHC2021

executable cadence
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        cadence
    hs-source-dirs:   app
    default-language: GHC2021

test-suite cadence-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        CadenceSpec
        Cadence.GoalSpec
        Cadence.ObjectiveSpec
    hs-source-dirs:   test
    build-depends:
        base ^>=4.20.2.0,
        cadence,
        hspec ^>=2.11.12,
        text ^>=2.1.3,
        time ^>=1.12.2
    default-language: GHC2021
